tests/samples/negative/pattern_matching/match_expression_duplicate.ax
module match_expression_duplicate;

enum Choice: u8 {
    zero = 0,
    one = 1,
}

fn main() -> i32 {
    return match Choice.zero {
        .zero => 0,
        .zero => 1,
        .one => 2,
    };
}
